--- a/css/style.css
+++ b/css/style.css
@@ -31,4 +31,13 @@ body {
 }
 .listname li a {
     text-decoration: none;
+    text-decoration: none;
+    color: #333;
+    border-bottom: 2px solid transparent;
+    padding-bottom: 5px;
+    transition: all 0.3s ease;
+}
+.listname li a:hover {
+    border-bottom: 2px solid #333;
+    padding-bottom: 0;
 }
